Added Webfont Loader & sessionStorage | Updated CNAME to www | Updated canonical link to www | Gulp task optimizations

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ permalink: /index.html
 
 <div class="grid__col--12">
     <div class="grid content--persona panel--padded">
-        <div class="photo--author center">
+        <div class="center">
             <img src="{{ site.baseurl }}/assets/images/img-steve.png" alt="Photo of {{ site.author_name }}"
                  class="content--persona--photo">
         </div>
         <article>
             <header class="panel--padded">
                 <h2 class="h--mega">Hello! I'm Steve.</h2>
-                <h3 class="medium olive">I'm an entry-level web developer with a focus on
+                <h3 class="h--sec medium olive">I'm an entry-level web developer with a focus on
                     UI/UX Design. I look forward to becoming a full-stack developer in the foreseeable future.
                     <img src="{{ site.image_path }}/sunny.png"
                          class="icn emoji">
