#HTML and CSS Fixes - Removed dummy stylesheet from HTML. No longer relevant for Pagespeed compensation. - Removed excess padding from contact heading. - Added README - Added generated CSS to source directory
#HTML5 Outliner
Fixed page outline using HTML5 Outliner Guide
    * Affected pages:
        - header.html
        - footer.html

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 layout: default
 short_page: true
 page_name: find me
-permalink: /contact/index.html
+permalink: /find-me/index.html
 ---
-<div class="grid__col--12 panel--padded--centered">
-    <h2 class="center grey light panel">Social</h2>
+<div class="grid__col--12 center">
+
+    <h2 class="grey light panel">Social</h2>
     <div class="panel">
         <h4>Github:</h4>
         <a class="inline--link"
