--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ permalink: /index.html
 
 
 <div class="grid__col--12">
+    <h2 class="visually-hidden">Profile</h2>
     <div class="grid content--persona panel--padded">
         <div class="center">
             <img src="{{ site.baseurl }}/assets/images/img-steve.png" alt="Photo of {{ site.author_name }}"
@@ -13,16 +14,18 @@ permalink: /index.html
         </div>
         <article>
             <header class="panel--padded">
-                <h2 class="h--mega">Hello! I'm Steve.</h2>
-                <h3 class="h--sec medium olive">I'm an entry-level web developer with a focus on
-                    UI/UX Design. I look forward to becoming a full-stack developer in the foreseeable future.
+                <div class="bold h--mega">Hello! I'm Steve.</div>
+                <div class="h--sec medium olive">I'm an entry-level front-end web developer. I endeavour to develop
+                    aesthetically pleasing high-performance websites, and look forward to becoming a full-stack
+                    developer in the foreseeable future.
                     <img src="{{ site.image_path }}/sunny.png"
                          class="icn emoji">
-                </h3>
+                </div>
             </header>
 
 
             <div class="article--content">
+                <h2 class="visually-hidden">How I Became a Web Developer</h2>
                 <p>
                     My love for design started in 2009 on an online MMORPG community forum. I wanted to create one of
                     the
@@ -34,34 +37,34 @@ permalink: /index.html
                     feeling of actually doing something you love.
                     <br>
                     It gradually became a hobby that I indulged in for the years that followed, and not just in making
-                    forum
-                    signatures.
+                    forum signatures.
                 </p>
 
 
-                <p>Even though graphic design gave me a sense of achievement, there was still something missing.
-                    I like to solve visual problems, specifically through analytical means if possible. So far, I wasn't
-                    getting
-                    enough of that with designing alone
-                    (occasionally trying to illustrate on my Wacom tablet. <a
-                            href="https://www.behance.net/gallery/28537439/Turtle-Illustration" target="_blank"
-                            class="inline--link">I wasn't that great</a>).</p>
+                <p>Even though graphic design gave me a sense of achievement, I felt a void in my workflow. I like to
+                    solve visual problems, essentially through analytical means whenever possible. So far, I wasn't
+                    getting enough of that through designing alone (occasionally trying to illustrate on my Wacom
+                    tablet, too. Don't judge. <a href="https://www.behance.net/gallery/28537439/Turtle-Illustration"
+                                                 target="_blank"
+                                                 class="inline--link">I wasn't that great</a>). </p>
 
-                <p>Either way, I finally decided to pursue a professional career in design at NIIT in 2014. I
-                    had a great job at the pharmacy by then, but most of my time off work was spent poring over design
-                    and illustration tutorials. I was good at my job, but it just wasn't for me.
+                <p>Incidentally, I decided to pursue a professional career in design at NIIT in 2014. I had a great job
+                    at the pharmacy by then, but most of my time off work was spent poring over design and illustration
+                    tutorials. I was good at my job, but it just wasn't for me.
                 </p>
 
                 <p>The graphic design course at NIIT came with a Web Development package. I was curious about web
                     development since I had no prior experience with it whatsoever.</p>
 
-                <p>Upon starting the Web Development course after completing the graphic design module, I realised a
-                    week in that it was what I'd been waiting for
-                    all along. I get to design, but in a manner that involved building with code, analysing it and
+                <p>Starting the Web Development module was a blessing in disguise. A few lessons and I was hooked!
+                    Apparently, it was what I'd been waiting for all along. I got to design, but in a manner that
+                    involved building with code, analysing it and
                     fixing bugs. It was perfect for me.</p>
 
                 <p>To date, not a day has gone by when I don't meddle and tinker with some code. I am absolutely certain
-                    I've found a career path I'm truly passionate about.
+                    I've found a career path I'm truly passionate about. It's exciting, and with the slew of new
+                    technologies springing up everyday to make our work easier, I say it's a great time to be a web
+                    developer.
                 </p>
             </div>
         </article>
