#Accessibility and Image Optimization   - Addressed aXe issues in-browser. Fixed issues on mobile and desktop => colors, aria-labels, etc   - Converted images to PNG format to replace PageSpeed's lossy jpg suggestions
#HTML & CSS Optimizations
  - Added more copyright info to footer
  - Reinstated transitions for link items

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ permalink: /index.html
                 <div class="h--sec medium olive">I'm an entry-level front-end web developer. I endeavour to develop
                     aesthetically pleasing high-performance websites, and look forward to becoming a full-stack
                     developer in the foreseeable future.
-                    <img src="{{ site.image_path }}/sunny.png"
+                    <img src="{{ site.image_path }}/sunny.png" alt="Optimistic emoji"
                          class="icn emoji">
                 </div>
             </header>
